# ImageProcessor

./: CMakeLists.txt  main.cpp
include/: Effects  basic_include
shaders/: f.glsl  v.glsl
